# apc2

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
config/: baxter.rc  baxter.sh  baxterrc
msg/: Status.msg
scripts/: classifier_creator.py  classifier_creator.py~  features.pkl  features.pkl_01.npy  labels.pkl  quickAndDirty.py  recognition_server.py  recognition_server.py~
src/: find.cpp  move.cpp  move.cpp~  pick.cpp  save.cpp
srv/: recognize.srv  recognize.srv~
